--- a/index.html
+++ b/index.html
@@ -97,16 +97,13 @@
             <div class="cv-content">
                  <article class="experience">
                     <h3>Experience</h3>
-                    <p>UPQODE (front&#8209;end&#160;developer)<span>10.2019&#8209;12.2019</span></p>
+                    <p class="time-country-code">Country Studio (front&#8209;end&#160;developer)<span>01.2020&#160;&#8209;&#160;since</span></p>
+                    <p>UPQODE (front&#8209;end&#160;developer)<span>10.2019&#160;&#8209;&#160;12.2019</span></p>
                 </article>
-                <!-- <article class="experience">
-                    <h3>Experience</h3>
-                    <p>Country Studio (front&#8209;end&#160;developer)<span>12.2018&#8209;02.2020</span></p>
-                </article> -->
                 <article class="education">
                     <h3>Education</h3>
-                    <p>Ukrainian Academy of Printing (faculty&#160;"Graphics")<span>2011&#8209;2012</span></p>
-                    <p>University of Human Development "Ukraine" (faculty&#160;"Finance")<span>2005&#8209;2011</span>
+                    <p>Ukrainian Academy of Printing (faculty&#160;"Graphics")<span>2011&#160;&#8209;&#160;2012</span></p>
+                    <p>University of Human Development "Ukraine" (faculty&#160;"Finance")<span>2005&#160;&#8209;&#160;2011</span>
                     </p>
                 </article>
                 <article class="courses">
@@ -170,6 +167,9 @@
                             src=".//img/contact_logo_telegram.png" alt="logo telegram"></a></li>
                 <li><a href="tel:+380509172025"><img src=".//img/contact_logo_call.png" alt="logo call me"></a></li>
             </ul>
+            <!-- <div class="foot-content">
+                <p>Serhiy Antipov &copy; 2019</p>
+            </div> -->
         </footer>
     </div>
 
