--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="cv-content">
                  <article class="experience">
                     <h3>Experience</h3>
-                    <p class="time-country-code">Country Studio (front&#8209;end&#160;developer)<span>01.2020&#160;&#8209;&#160;since</span></p>
+                    <p class="time-country-code">Country Studio (front&#8209;end&#160;developer)<span>01.2020&#160;&#8209;&#160;till now</span></p>
                     <p>UPQODE (front&#8209;end&#160;developer)<span>10.2019&#160;&#8209;&#160;12.2019</span></p>
                 </article>
                 <article class="education">
