--- a/index.html
+++ b/index.html
@@ -129,6 +129,10 @@
                             Intermediate&nbsp;level</p>
                     </div>
                     <div>
+                        <img src="img/link_react.png" alt="react skill">
+                        <p><span>React </span>Basic knowledge. Began studying</p>
+                    </div>
+                    <div>
                         <img src="img/link_git.png" alt="git skill">
                         <p><span>Git </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
                     </div>
@@ -149,10 +153,6 @@
                     <div>
                         <img src="img/link_wp.png" alt="wp skill">
                         <p><span>WordPress </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
-                    </div>
-                    <div>
-                        <img src="img/link_react.png" alt="react skill">
-                        <p><span>React </span>Began studying</p>
                     </div>
                 </article>
             </div>
