country studio fin

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" lang="en">
     <meta name="Description" content="Serhiy Antipov CV">
-    <meta name="viewport" content="width=device-width, initial-scale=0.75">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serhiy Antipov CV</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
@@ -34,8 +34,8 @@
             </ul>
         </header>
         <div class="vacancy-description">
-            <p>Looking for a job as front end developer.</p>
-            <p>Ready to perform a test task.</p>
+            <p>Looking for a job as front end developer</p>
+            <p>Ready to perform a test task</p>
         </div>
         <main class="cv-main">
             <aside>
@@ -67,13 +67,13 @@
                         <li>English&nbsp;(A2)</li>
                     </ul>
                 </article>
-                <article class="about-me">
+                <!-- <article class="about-me">
                     <h3>About me</h3>
                     <ul>
                         <li>I studied HTML, CSS and JS for the last two years. </li>
                         <li>I like web design and front end development.</li>
                     </ul>
-                </article>
+                </article> -->
                 <article class="hobbies">
                     <h3>Hobbies</h3>
                     <ul>
@@ -94,23 +94,25 @@
 
             </aside>
             <div class="cv-content">
-                 <article class="experience">
+                <article class="experience">
                     <h3>Experience</h3>
-                    <p class="time-country-code">Country Studio (front&#8209;end&#160;developer)<span>01.2020&#160;&#8209;&#160;till now</span></p>
+                    <p class="time-country-code">Country Studio
+                        (front&#8209;end&#160;developer)<span>01.2020&#160;&#8209;&#160;05.2020</span></p>
                     <p>UPQODE (front&#8209;end&#160;developer)<span>10.2019&#160;&#8209;&#160;12.2019</span></p>
                 </article>
                 <article class="education">
                     <h3>Education</h3>
-                    <p>Ukrainian Academy of Printing (faculty&#160;"Graphics")<span>2011&#160;&#8209;&#160;2012</span></p>
-                    <p>University of Human Development "Ukraine" (faculty&#160;"Finance")<span>2005&#160;&#8209;&#160;2011</span>
+                    <p>Ukrainian Academy of Printing (faculty&#160;"Graphics")<span>2011&#160;&#8209;&#160;2012</span>
+                    </p>
+                    <p>University of Human Development "Ukraine"
+                        (faculty&#160;"Finance")<span>2005&#160;&#8209;&#160;2011</span>
                     </p>
                 </article>
                 <article class="courses">
                     <h3>Courses</h3>
                     <p>«SoftServe IT Academy» HTML/CSS/JavaScript<span>2019</span></p>
-                    <p>«HTML Academy» Professional JavaScript (level&#160;1)<span>2019</span></p>
-                    <p>«HTML Academy» Professional HTML&CSS (level&#160;1)<span>2018</span></p>
-                    <p>«Logos» HTML/CSS (basic&#160;course)<span>2018</span></p>
+                    <p>«HTML Academy» Professional JavaScript<span>2019</span></p>
+                    <p>«Logos IT Academy» HTML/CSS<span>2018</span></p>
                 </article>
                 <article class="professional-skill">
                     <h3>Professional skill</h3>
@@ -129,7 +131,7 @@
                     </div>
                     <div>
                         <img src="img/link_react.png" alt="react skill">
-                        <p><span>React </span>Basic knowledge. Began studying</p>
+                        <p><span>React </span>Pre-Intermediate&nbsp;level. Began studying</p>
                     </div>
                     <div>
                         <img src="img/link_git.png" alt="git skill">
@@ -166,12 +168,8 @@
                             src=".//img/contact_logo_telegram.png" alt="logo telegram"></a></li>
                 <li><a href="tel:+380509172025"><img src=".//img/contact_logo_call.png" alt="logo call me"></a></li>
             </ul>
-            <!-- <div class="foot-content">
-                <p>Serhiy Antipov &copy; 2019</p>
-            </div> -->
         </footer>
     </div>
-
 </body>
 
 </html>
