--- a/index.html
+++ b/index.html
@@ -117,43 +117,43 @@
                 <article class="professional-skill">
                     <h3>Professional skill</h3>
                     <div>
-                        <img src="img/link_html.png" alt="html skill">
-                        <p><span>HTML </span>Writing semantic html markup. Intermediate&nbsp;level</p>
+                        <img src="img/skill/link_html.png" alt="html skill">
+                        <p><span>HTML </span>Writing semantic html markup. Upper&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
-                        <img src="img/link_css.png" alt="css skill">
-                        <p><span>CSS, SASS </span>Adaptive design and cross-browser layout. Intermediate&nbsp;level</p>
+                        <img src="img/skill/link_css.png" alt="css skill">
+                        <p><span>CSS, SASS </span>Adaptive design and cross-browser layout. Upper&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
-                        <img src="img/link_js.png" alt="js skill">
+                        <img src="img/skill/link_js.png" alt="js skill">
                         <p><span>JavaScript </span>Working with DOM elements, writing simple scripts.
                             Intermediate&nbsp;level</p>
                     </div>
                     <div>
-                        <img src="img/link_react.png" alt="react skill">
-                        <p><span>React </span>Pre-Intermediate&nbsp;level. Began studying</p>
+                        <img src="img/skill/link_react.png" alt="react skill">
+                        <p><span>React </span>Began studying. Pre&#8209;Intermediate&nbsp;level </p>
                     </div>
                     <div>
-                        <img src="img/link_git.png" alt="git skill">
-                        <p><span>Git </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
+                        <img src="img/skill/link_git.png" alt="git skill">
+                        <p><span>Git </span>Basic knowledge. Intermediate&nbsp;level</p>
                     </div>
                     <div>
-                        <img src="img/link_gulp.png" alt="react skill">
-                        <p><span>Gulp </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
+                        <img src="img/skill/link_gulp.png" alt="react skill">
+                        <p><span>Gulp </span>Basic knowledge. Intermediate&nbsp;level</p>
                     </div>
                     <div>
-                        <img src="img/link_ps.png" alt="ps skill">
+                        <img src="img/skill/link_ps.png" alt="ps skill">
                         <p><span>Photoshop </span>Work with .psd layout of any complexity.
-                            Upper-Intermediate&nbsp;level
+                            Upper&#8209;Intermediate&nbsp;level
                         </p>
                     </div>
                     <div>
-                        <img src="img/link_bootstrap.png" alt="wp skill">
+                        <img src="img/skill/link_bootstrap.png" alt="wp skill">
                         <p><span>Bootstrap 4 </span>Basic knowledge. Intermediate&nbsp;level</p>
                     </div>
                     <div>
-                        <img src="img/link_wp.png" alt="wp skill">
-                        <p><span>WordPress </span>Basic knowledge. Pre-Intermediate&nbsp;level</p>
+                        <img src="img/skill/link_wp.png" alt="wp skill">
+                        <p><span>WordPress </span>Basic knowledge. Pre&#8209;Intermediate&nbsp;level</p>
                     </div>
                 </article>
             </div>
