--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
             <div class="cv-content">
                 <article class="experience">
                     <h3>Experience</h3>
+                    <p class="time-country-code">Noosphere
+                        (roku&#160;game&#160;developer)<span>09.2020&#160;&#8209;&#160;till&#160;now&#160;&#160;</span></p>
                     <p class="time-country-code">Country Studio
                         (front&#8209;end&#160;developer)<span>01.2020&#160;&#8209;&#160;06.2020</span></p>
                     <p>UPQODE (front&#8209;end&#160;developer)<span>10.2019&#160;&#8209;&#160;12.2019</span></p>
@@ -116,6 +118,10 @@
                 </article>
                 <article class="professional-skill">
                     <h3>Professional skill</h3>
+                    <div>
+                        <img src="img/skill/link_bright_script.png" alt="bright-script skill">
+                        <p><span>BrightScript </span>Began studying. Basic knowledge. Pre&#8209;Intermediate&nbsp;level</p>
+                    </div>
                     <div>
                         <img src="img/skill/link_html.png" alt="html skill">
                         <p><span>HTML </span>Writing semantic html markup. Upper&#8209;Intermediate&nbsp;level</p>
