--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="https://www.linkedin.com/in/serhiy-antipov" target="_blank" rel="noopener">
                         <img src="img/logo_in_white.png" alt="linkedin"></a>
                 </li>
-                <li><a href="https://github.com/SerhiyAntipov/SerhiyAntipov.github.io" target="_blank" rel="noopener">
+                <li><a href="https://github.com/SerhiyAntipov" target="_blank" rel="noopener">
                         <img src="img/logo_git_white.png" alt="git"></a>
                 </li>
                 <li><a href="mailto:serhiy.antipov@gmail.com" target="_blank" rel="noopener">
