--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
                 <article class="experience">
                     <h3>Experience</h3>
                     <p class="time-country-code">Noosphere
-                        (roku&#160;game&#160;developer)<span>09.2020&#160;&#8209;&#160;till&#160;now&#160;&#160;</span></p>
+                        (BrightScript&#160;game&#160;developer)<span>09.2020&#160;&#8209;&#160;till&#160;now&#160;&#160;</span></p>
                     <p class="time-country-code">Country Studio
-                        (front&#8209;end&#160;developer)<span>01.2020&#160;&#8209;&#160;06.2020</span></p>
-                    <p>UPQODE (front&#8209;end&#160;developer)<span>10.2019&#160;&#8209;&#160;12.2019</span></p>
+                        (Front&#8209;end&#160;developer)<span>01.2020&#160;&#8209;&#160;06.2020</span></p>
+                    <p>UPQODE 
+                        (Front&#8209;end&#160;developer)<span>10.2019&#160;&#8209;&#160;12.2019</span></p>
                 </article>
                 <article class="education">
                     <h3>Education</h3>
