--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                 <article class="experience">
                     <h3>Experience</h3>
                     <p class="time-country-code">Noosphere
-                        (BrightScript&#160;game&#160;developer)<span>09.2020&#160;&#8209;&#160;till&#160;now&#160;&#160;</span></p>
+                        (Roku&#160;BrightScript game&#160;developer)<span>09.2020&#160;&#8209;&#160;till&#160;now&#160;&#160;</span></p>
                     <p class="time-country-code">Country Studio
                         (Front&#8209;end&#160;developer)<span>01.2020&#160;&#8209;&#160;06.2020</span></p>
-                    <p>UPQODE 
+                    <p class="time-country-code">UPQODE 
                         (Front&#8209;end&#160;developer)<span>10.2019&#160;&#8209;&#160;12.2019</span></p>
                 </article>
                 <article class="education">
@@ -121,7 +121,7 @@
                     <h3>Professional skill</h3>
                     <div>
                         <img src="img/skill/link_bright_script.png" alt="bright-script skill">
-                        <p><span>BrightScript </span>Began studying. Basic knowledge. Pre&#8209;Intermediate&nbsp;level</p>
+                        <p><span>BrightScript </span>Intermediate&nbsp;level. Began&nbsp;studying. </p>
                     </div>
                     <div>
                         <img src="img/skill/link_html.png" alt="html skill">
