--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <article class="experience">
                     <h3>Experience</h3>
                     <p class="time-country-code">Noosphere
-                        (Roku&#160;BrightScript game&#160;developer)<span>09.2020&#160;&#8209;&#160;till&#160;now&#160;&#160;</span></p>
+                        (Roku&#160;game&#160;developer)<span>09.2020&#160;&#8209;&#160;till&#160;now&#160;&#160;</span></p>
                     <p class="time-country-code">UPQODE 
                         (Front&#8209;end&#160;developer)<span>10.2019&#160;&#8209;&#160;08.2020</span></p>
                 </article>
@@ -119,7 +119,7 @@
                     <h3>Professional skill</h3>
                     <div>
                         <img src="img/skill/link_bright_script.png" alt="bright-script skill">
-                        <p><span>BrightScript </span>Intermediate&nbsp;level. Began&nbsp;studying. </p>
+                        <p><span>BrightScript </span>Basic knowledge. Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/skill/link_html.png" alt="html skill">
