--- a/index.html
+++ b/index.html
@@ -19,22 +19,26 @@
             </div>
             <div class="owner-photo"><img src="img/owner-photo.jpg" alt="owner photo"></div>
             <ul class="cv-header-social">
-                <li><a href="https://www.facebook.com/AntipovSerhiy" target="_blank" rel="noopener">
+                <li>
+                    <a href="https://www.facebook.com/AntipovSerhiy" target="_blank" rel="noopener">
                         <img src="img/logo_fb_white.png" alt="fb"></a>
                 </li>
-                <li><a href="https://www.linkedin.com/in/serhiy-antipov" target="_blank" rel="noopener">
+                <li>
+                    <a href="https://www.linkedin.com/in/serhiy-antipov" target="_blank" rel="noopener">
                         <img src="img/logo_in_white.png" alt="linkedin"></a>
                 </li>
-                <li><a href="https://github.com/SerhiyAntipov" target="_blank" rel="noopener">
+                <li>
+                    <a href="https://github.com/SerhiyAntipov" target="_blank" rel="noopener">
                         <img src="img/logo_git_white.png" alt="git"></a>
                 </li>
-                <li><a href="mailto:serhiy.antipov@gmail.com" target="_blank" rel="noopener">
+                <li>
+                    <a href="mailto:serhiy.antipov@gmail.com" target="_blank" rel="noopener">
                         <img src="img/logo_mail_white.png" alt="gmail"></a>
                 </li>
             </ul>
         </header>
         <div class="vacancy-description">
-            <p>Looking for a job as front end developer</p>
+            <p>Looking for a job as Front‑end developer.&#160;</p>
             <p>Ready to perform a test task</p>
         </div>
         <main class="cv-main">
@@ -46,16 +50,13 @@
                             <a href="#"><img src="img/icon_location.png" alt="icon location">Ukraine, Lviv</a>
                         </li>
                         <li>
-                            <a href="tel:+380509172025"><img src="img/icon_phone.png"
-                                    alt="icon phone">+38(050)917&nbsp;20&nbsp;25</a>
+                            <a href="tel:+380509172025"><img src="img/icon_phone.png" alt="icon phone">+38(050)917&nbsp;20&nbsp;25</a>
                         </li>
                         <li>
-                            <a href="mailto:serhiy.antipov@gmail.com" target="_blank" rel="noopener"><img
-                                    src="img/icon_mail.png" alt="icon mail">serhiy.antipov@gmail.com</a>
+                            <a href="mailto:serhiy.antipov@gmail.com" target="_blank" rel="noopener"><img src="img/icon_mail.png" alt="icon mail">serhiy.antipov@gmail.com</a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/AntipovSerhiy" target="_blank" rel="noopener"><img
-                                    src="img/icon_facebook.png" alt="icon facebook">facebook.com/AntipovSerhiy</a>
+                            <a href="https://www.facebook.com/AntipovSerhiy" target="_blank" rel="noopener"><img src="img/icon_facebook.png" alt="icon facebook">facebook.com/AntipovSerhiy</a>
                         </li>
                     </ul>
                 </article>
@@ -96,17 +97,21 @@
             <div class="cv-content">
                 <article class="experience">
                     <h3>Experience</h3>
-                    <p class="time-country-code">Noosphere
-                        (Roku&#160;game&#160;developer)<span>09.2020&#160;&#8209;&#160;till&#160;now&#160;&#160;</span></p>
-                    <p class="time-country-code">UPQODE 
-                        (Front&#8209;end&#160;developer)<span>10.2019&#160;&#8209;&#160;08.2020</span></p>
+                    <p class="time-country-code">Noosphere (Roku&#160;game&#160;developer)
+                        <span>09.2020&#160;&#8209;&#160;Till&#160;Now</span>
+                    </p>
+                    <p class="expiriense-description">Developing games for the Roku devices. Used in development Roku&#8209;gameEngine</p>
+                    <p class="time-country-code">UPQODE (Front&#8209;end&#160;developer)
+                        <span>10.2019&#160;&#8209;&#160;08.2020</span>
+                    </p>
+                    <p class="expiriense-description">Development website template from a .psd layouts. Used in development HTML5, Sass, Bootstrap, JavaScript, Nunjucks, Gulp</p>
                 </article>
                 <article class="education">
                     <h3>Education</h3>
                     <p>Ukrainian Academy of Printing (faculty&#160;"Graphics")<span>2011&#160;&#8209;&#160;2012</span>
                     </p>
-                    <p>University of Human Development "Ukraine"
-                        (faculty&#160;"Finance")<span>2005&#160;&#8209;&#160;2011</span>
+                    <p>University of Human Development "Ukraine" (faculty&#160;"Finance")
+                        <span>2005&#160;&#8209;&#160;2011</span>
                     </p>
                 </article>
                 <article class="courses">
@@ -118,8 +123,17 @@
                 <article class="professional-skill">
                     <h3>Professional skill</h3>
                     <div>
-                        <img src="img/skill/link_bright_script.png" alt="bright-script skill">
-                        <p><span>BrightScript </span>Basic knowledge. Intermediate&nbsp;level</p>
+                        <img src="img/skill/link_scenegraph.png" alt="roku sceneGraph skill">
+                        <p><span>Roku SceneGraph </span>Began&#8209;studying.
+                    </div>
+                    <div>
+                        <img src="img/skill/link_Roku.png" alt="bright-script skill">
+                        <p><span>BrightScript </span>Basic knowledge BrightScript. Developing games, used in development Roku‑gameEngine. Intermediate&nbsp;level
+                        </p>
+                    </div>
+                    <div>
+                        <img src="img/skill/link_react.png" alt="react skill">
+                        <p><span>React </span>Began studying. Developed one game. Pre&#8209;Intermediate&nbsp;level </p>
                     </div>
                     <div>
                         <img src="img/skill/link_html.png" alt="html skill">
@@ -127,16 +141,13 @@
                     </div>
                     <div>
                         <img src="img/skill/link_css.png" alt="css skill">
-                        <p><span>CSS, SASS </span>Adaptive design and cross-browser layout. Upper&#8209;Intermediate&nbsp;level</p>
+                        <p><span>CSS, SASS </span>Adaptive design and cross-browser layout. Upper&#8209;Intermediate&nbsp;level
+                        </p>
                     </div>
                     <div>
                         <img src="img/skill/link_js.png" alt="js skill">
-                        <p><span>JavaScript </span>Working with DOM elements, writing simple scripts.
-                            Intermediate&nbsp;level</p>
-                    </div>
-                    <div>
-                        <img src="img/skill/link_react.png" alt="react skill">
-                        <p><span>React </span>Began studying. Pre&#8209;Intermediate&nbsp;level </p>
+                        <p><span>JavaScript </span>Working with DOM elements, writing simple scripts. Intermediate&nbsp;level
+                        </p>
                     </div>
                     <div>
                         <img src="img/skill/link_git.png" alt="git skill">
@@ -147,12 +158,6 @@
                         <p><span>Gulp </span>Basic knowledge. Intermediate&nbsp;level</p>
                     </div>
                     <div>
-                        <img src="img/skill/link_ps.png" alt="ps skill">
-                        <p><span>Photoshop </span>Work with .psd layout of any complexity.
-                            Upper&#8209;Intermediate&nbsp;level
-                        </p>
-                    </div>
-                    <div>
                         <img src="img/skill/link_bootstrap.png" alt="wp skill">
                         <p><span>Bootstrap 4 </span>Basic knowledge. Intermediate&nbsp;level</p>
                     </div>
@@ -160,18 +165,28 @@
                         <img src="img/skill/link_wp.png" alt="wp skill">
                         <p><span>WordPress </span>Basic knowledge. Pre&#8209;Intermediate&nbsp;level</p>
                     </div>
+                    <div>
+                        <img src="img/skill/link_ps.png" alt="ps skill">
+                        <p><span>Photoshop </span>Work with .psd layout of any complexity. Upper&#8209;Intermediate&nbsp;level
+                        </p>
+                    </div>
                 </article>
             </div>
         </main>
         <footer class="cv-footer">
             <ul class="footer-contacts">
-                <li><a href="viber://add?number=%2B380509172025" target="_blank" rel="noopener"><img
-                            src=".//img/contact_logo_viber.png" alt="logo viber"></a></li>
-                <li><a href="https://msng.link/wa/380509172025" target="_blank" rel="noopener"><img
-                            src=".//img/contact_logo_whatsapp.png" alt="logo whatsapp"></a></li>
-                <li><a href="tg://resolve?domain=Antipov_Serhiy" target="_blank" rel="noopener"><img
-                            src=".//img/contact_logo_telegram.png" alt="logo telegram"></a></li>
-                <li><a href="tel:+380509172025"><img src=".//img/contact_logo_call.png" alt="logo call me"></a></li>
+                <li>
+                    <a href="viber://add?number=%2B380509172025" target="_blank" rel="noopener"><img src=".//img/contact_logo_viber.png" alt="logo viber"></a>
+                </li>
+                <li>
+                    <a href="https://msng.link/wa/380509172025" target="_blank" rel="noopener"><img src=".//img/contact_logo_whatsapp.png" alt="logo whatsapp"></a>
+                </li>
+                <li>
+                    <a href="tg://resolve?domain=Antipov_Serhiy" target="_blank" rel="noopener"><img src=".//img/contact_logo_telegram.png" alt="logo telegram"></a>
+                </li>
+                <li>
+                    <a href="tel:+380509172025"><img src=".//img/contact_logo_call.png" alt="logo call me"></a>
+                </li>
             </ul>
         </footer>
     </div>
