--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </div>
                     <div>
                         <img src="img/skill/link_Roku.png" alt="bright-script skill">
-                        <p><span>BrightScript </span>Basic knowledge BrightScript. Developing games, used in development Roku‑gameEngine. Intermediate&nbsp;level
+                        <p><span>BrightScript </span>Game development. Used in development Roku‑gameEngine. Pre&#8209;Intermediate&nbsp;level
                         </p>
                     </div>
                     <div>
