--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <h3>Contacts</h3>
                     <ul>
                         <li>
-                            <a href="#"><img src="img/icon_location.png" alt="icon location">Ukraine, Lviv</a>
+                            <a href="#"><img src="img/icon_location.png" alt="icon location" rel="noopener">Ukraine, Lviv</a>
                         </li>
                         <li>
-                            <a href="tel:+380509172025"><img src="img/icon_phone.png" alt="icon phone">+38(050)917&nbsp;20&nbsp;25</a>
+                            <a href="tel:+380509172025"><img src="img/icon_phone.png" alt="icon phone" rel="noopener">+38(050)917&nbsp;20&nbsp;25</a>
                         </li>
                         <li>
                             <a href="mailto:serhiy.antipov@gmail.com" target="_blank" rel="noopener"><img src="img/icon_mail.png" alt="icon mail">serhiy.antipov@gmail.com</a>
@@ -63,18 +63,11 @@
                 <article class="language">
                     <h3>Language</h3>
                     <ul>
-                        <li>Ukrainian&nbsp;(native)</li>
-                        <li>Russian&nbsp;(fluent)</li>
-                        <li>English&nbsp;(A2)</li>
+                        <li><img src="img/ua.png" alt="icon UA language">Ukrainian&nbsp;(native)</li>
+                        <li><img src="img/ru.png" alt="icon RU language">Russian&nbsp;(fluent)</li>
+                        <li><img src="img/en.png" alt="icon EN language">English&nbsp;(A2)</li>
                     </ul>
                 </article>
-                <!-- <article class="about-me">
-                    <h3>About me</h3>
-                    <ul>
-                        <li>I studied HTML, CSS and JS for the last two years. </li>
-                        <li>I like web design and front end development.</li>
-                    </ul>
-                </article> -->
                 <article class="hobbies">
                     <h3>Hobbies</h3>
                     <ul>
@@ -84,27 +77,31 @@
                         <li><img src="img/icon_sport.png" alt="icon sport">Sport</li>
                     </ul>
                 </article>
-                <div class="link">
-                    <a href="https://serhiyantipov.github.io/" target="_blank" rel="noopener">
-                        <span><img src="img/icon_portfolio.png" alt="icon_portfolio">View portfolio</span>
-                    </a>
-                    <a href="pdf/Serhiy-Antipov-CV.pdf" download="">
-                        <span><img src="img/icon_cv.png" alt="icon_portfolio">Download CV .pdf</span>
-                    </a>
-                </div>
-
+                <article class="links">
+                    <h3>Links</h3>
+                    <ul>
+                        <li>
+                            <a href="https://serhiyantipov.github.io/" target="_blank" rel="noopener"><img src="img/icon_portfolio.png" alt="icon_portfolio">View portfolio</a>
+                        </li>
+                        <li>
+                            <a href="pdf/Serhiy-Antipov-CV.pdf" download="" rel="noopener"><img src="img/icon_cv.png" alt="icon_portfolio">Download CV .pdf</a>
+                        </li>
+                    </ul>
+                </article>
             </aside>
             <div class="cv-content">
                 <article class="experience">
                     <h3>Experience</h3>
-                    <p class="time-country-code">Noosphere (Roku&#160;game&#160;developer)
-                        <span>09.2020&#160;&#8209;&#160;Till&#160;Now</span>
+                    <p class="time-country-code">Noosphere (Roku&#160;Front&#8209;end&#160;developer)
+                        <span>09.2020&#160;&#8209;&#160;Till&#160;now</span>
                     </p>
+                    <p class="expiriense-description">Use SceneGraph framework for developing Roku channels.</p>
                     <p class="expiriense-description">Developing games for the Roku devices. Used in development Roku&#8209;gameEngine</p>
                     <p class="time-country-code">UPQODE (Front&#8209;end&#160;developer)
                         <span>10.2019&#160;&#8209;&#160;08.2020</span>
                     </p>
                     <p class="expiriense-description">Development website template from a .psd layouts. Used in development HTML5, Sass, Bootstrap, JavaScript, Nunjucks, Gulp</p>
+
                 </article>
                 <article class="education">
                     <h3>Education</h3>
@@ -185,7 +182,7 @@
                     <a href="tg://resolve?domain=Antipov_Serhiy" target="_blank" rel="noopener"><img src=".//img/contact_logo_telegram.png" alt="logo telegram"></a>
                 </li>
                 <li>
-                    <a href="tel:+380509172025"><img src=".//img/contact_logo_call.png" alt="logo call me"></a>
+                    <a href="tel:+380509172025" rel="noopener"><img src=".//img/contact_logo_call.png" alt="logo call me"></a>
                 </li>
             </ul>
         </footer>
