--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </ul>
         </header>
         <div class="vacancy-description">
-            <p>Looking for a job as Front‑end developer.&#160;</p>
-            <p>Ready to perform a test task</p>
+            <!-- <p>Looking for a job as Front‑end developer.&#160;</p>
+            <p>Ready to perform a test task</p> -->
         </div>
         <main class="cv-main">
             <aside>
