upd Experience description

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                     <p class="time-country-code">TrafficDNA (Roku&#160;Front&#8209;end&#160;developer)
                         <span>09.2020&#160;&#8209;&#160;Till&#160;now</span>
                     </p>
-                    <p class="expiriense-description">Use SceneGraph framework for developing Roku channels.</p>
-                    <p class="expiriense-description">Developing games for the Roku devices. Used in development Roku&#8209;gameEngine</p>
+                    <p class="expiriense-description">&bull; Developing Roku sample channels and templates. The SceneGraph framework is used for developing.</p>
+                    <p class="expiriense-description">&bull; Developing games for the Roku devices. The Roku&#8209;gameEngine is used for developing game.</p>
                     <p class="time-country-code">UPQODE (Front&#8209;end&#160;developer)
                         <span>10.2019&#160;&#8209;&#160;08.2020</span>
                     </p>
-                    <p class="expiriense-description">Development website template from a .psd layouts. Used in development HTML5, Sass, Bootstrap, JavaScript, Nunjucks, Gulp</p>
+                    <p class="expiriense-description">&bull; Developing website template from a .psd layouts. Technology stack used in development HTML5, Sass, Bootstrap, JavaScript, WordPress, Nunjucks, Gulp.</p>
 
                 </article>
                 <article class="education">
@@ -121,7 +121,7 @@
                     <h3>Professional skill</h3>
                     <div>
                         <img src="img/skill/link_scenegraph.png" alt="roku sceneGraph skill">
-                        <p><span>Roku SceneGraph </span>Began&#8209;studying.
+                        <p><span>Roku SceneGraph </span>Began&#8209;studying
                     </div>
                     <div>
                         <img src="img/skill/link_Roku.png" alt="bright-script skill">
