--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     <ul>
                         <li><img src="img/icon_travel.png" alt="icon rtavel">Travel</li>
                         <li><img src="img/icon_art.png" alt="icon art">Art</li>
-                        <li><img src="img/icon_design.png" alt="icon design">Web design</li>
-                        <li><img src="img/icon_sport.png" alt="icon sport">Sport</li>
+                        <!-- <li><img src="img/icon_design.png" alt="icon design">Web design</li>
+                        <li><img src="img/icon_sport.png" alt="icon sport">Sport</li> -->
                     </ul>
                 </article>
                 <article class="links">
