add Angular & upd

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                     <p class="time-country-code">TrafficDNA (Roku&#160;Front&#8209;end&#160;developer)
                         <span>09.2020&#160;&#8209;&#160;Till&#160;now</span>
                     </p>
-                    <p class="expiriense-description">&bull; Developing Roku sample channels and templates. The SceneGraph framework is used for developing.</p>
-                    <p class="expiriense-description">&bull; Developing games for the Roku devices. The Roku&#8209;gameEngine is used for developing game.</p>
+                    <p class="expiriense-description">Developing Roku sample channels and templates. The SceneGraph framework is used for developing.</p>
+                    <p class="expiriense-description">Developing games for the Roku devices. The Roku&#8209;gameEngine is used for developing game.</p>
                     <p class="time-country-code">UPQODE (Front&#8209;end&#160;developer)
                         <span>10.2019&#160;&#8209;&#160;08.2020</span>
                     </p>
-                    <p class="expiriense-description">&bull; Developing website template from a .psd layouts. Technology stack used in development HTML5, Sass, Bootstrap, JavaScript, WordPress, Nunjucks, Gulp.</p>
+                    <p class="expiriense-description">Developing website template from a .psd layouts. Technology stack used in development HTML5, Sass, Bootstrap, JavaScript, WordPress, Nunjucks, Gulp.</p>
 
                 </article>
                 <article class="education">
@@ -120,17 +120,20 @@
                 <article class="professional-skill">
                     <h3>Professional skill</h3>
                     <div>
-                        <img src="img/skill/link_scenegraph.png" alt="roku sceneGraph skill">
-                        <p><span>Roku SceneGraph </span>Began&#8209;studying
+                        <img src="img/skill/link_angular.png" alt="angular skill">
+                        <p><span>Angular </span>Began&#8209;studying</p>
                     </div>
                     <div>
-                        <img src="img/skill/link_Roku.png" alt="bright-script skill">
-                        <p><span>BrightScript </span>Game development. Used in development Roku‑gameEngine. Pre&#8209;Intermediate&nbsp;level
-                        </p>
+                        <img src="img/skill/link_scenegraph.png" alt="roku sceneGraph skill">
+                        <p><span>SceneGraph </span>Use this framework for developing Roku sample channels and templates. Intermediate&nbsp;level</p>
                     </div>
+                    <!-- <div>
+                        <img src="img/skill/link_Roku.png" alt="bright-script skill">
+                        <p><span>BrightScript </span>Developing games for the Roku devices. Intermediate&nbsp;level</p>
+                    </div> -->
                     <div>
                         <img src="img/skill/link_react.png" alt="react skill">
-                        <p><span>React </span>Began studying. Developed one game. Pre&#8209;Intermediate&nbsp;level </p>
+                        <p><span>React </span>Developed one game. Pre&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/skill/link_html.png" alt="html skill">
@@ -138,13 +141,11 @@
                     </div>
                     <div>
                         <img src="img/skill/link_css.png" alt="css skill">
-                        <p><span>CSS, SASS </span>Adaptive design and cross-browser layout. Upper&#8209;Intermediate&nbsp;level
-                        </p>
+                        <p><span>CSS, SASS </span>Adaptive design and cross-browser layout. Upper&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/skill/link_js.png" alt="js skill">
-                        <p><span>JavaScript </span>Working with DOM elements, writing simple scripts. Intermediate&nbsp;level
-                        </p>
+                        <p><span>JavaScript </span>Working with DOM elements, writing simple scripts. Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/skill/link_git.png" alt="git skill">
@@ -164,8 +165,7 @@
                     </div>
                     <div>
                         <img src="img/skill/link_ps.png" alt="ps skill">
-                        <p><span>Photoshop </span>Work with .psd layout of any complexity. Upper&#8209;Intermediate&nbsp;level
-                        </p>
+                        <p><span>Photoshop </span>Work with .psd layout of any complexity. Upper&#8209;Intermediate&nbsp;level</p>
                     </div>
                 </article>
             </div>
