change icon & photo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>Serhiy Antipov</h1>
                 <h2>front end developer</h2>
             </div>
-            <div class="owner-photo"><img src="img/owner-photo.jpg" alt="owner photo"></div>
+            <div class="owner-photo"><img src="img/owner-photo2.jpg" alt="owner photo"></div>
             <ul class="cv-header-social">
                 <li>
                     <a href="https://www.facebook.com/AntipovSerhiy" target="_blank" rel="noopener">
@@ -81,10 +81,10 @@
                     <h3>Links</h3>
                     <ul>
                         <li>
-                            <a href="https://serhiyantipov.github.io/" target="_blank" rel="noopener"><img src="img/icon_portfolio.png" alt="icon_portfolio">View portfolio</a>
+                            <a href="https://serhiyantipov.github.io/" target="_blank" rel="noopener"><img src="img/icon_view.png" alt="icon_portfolio">View portfolio</a>
                         </li>
                         <li>
-                            <a href="pdf/Serhiy-Antipov-CV.pdf" download="" rel="noopener"><img src="img/icon_cv.png" alt="icon_portfolio">Download CV .pdf</a>
+                            <a href="pdf/Serhiy-Antipov-CV.pdf" download="" rel="noopener"><img src="img/icon_download.png" alt="icon_portfolio">Download CV .pdf</a>
                         </li>
                     </ul>
                 </article>
@@ -95,8 +95,9 @@
                     <p class="time-country-code">TrafficDNA (Roku&#160;Front&#8209;end&#160;developer)
                         <span>09.2020&#160;&#8209;&#160;Till&#160;now</span>
                     </p>
-                    <p class="expiriense-description">Developing Roku sample channels and templates. The SceneGraph framework is used for developing.</p>
-                    <p class="expiriense-description">Developing games for the Roku devices. The Roku&#8209;gameEngine is used for developing game.</p>
+                    <p class="expiriense-description dot">Creating a Single Page Website using Angular.</p>
+                    <p class="expiriense-description dot">Developing Roku sample channels and templates. The SceneGraph framework is used for developing.</p>
+                    <p class="expiriense-description dot">Developing games for the Roku devices. The Roku&#8209;gameEngine is used for developing game.</p>
                     <p class="time-country-code">UPQODE (Front&#8209;end&#160;developer)
                         <span>10.2019&#160;&#8209;&#160;08.2020</span>
                     </p>
@@ -121,11 +122,11 @@
                     <h3>Professional skill</h3>
                     <div>
                         <img src="img/skill/link_angular.png" alt="angular skill">
-                        <p><span>Angular </span>Began&#8209;studying</p>
+                        <p><span>Angular </span>Studying. Pre&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/skill/link_scenegraph.png" alt="roku sceneGraph skill">
-                        <p><span>SceneGraph </span>Use this framework for developing Roku sample channels and templates. Intermediate&nbsp;level</p>
+                        <p><span>SceneGraph </span>Used this framework for developing Roku sample channels and templates. Intermediate&nbsp;level</p>
                     </div>
                     <!-- <div>
                         <img src="img/skill/link_Roku.png" alt="bright-script skill">
