--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                     <p class="expiriense-description dot">Creating a Single Page Website using Angular.</p>
                     <p class="expiriense-description dot">Developing Roku sample channels and templates. The SceneGraph framework is used for developing.</p>
                     <p class="expiriense-description dot">Developing games for the Roku devices. The Roku&#8209;gameEngine is used for developing game.</p>
-                    <p class="time-country-code">UPQODE (Front&#8209;end&#160;developer)
+                    <p class="time-country-code dot">UPQODE (Front&#8209;end&#160;developer)
                         <span>10.2019&#160;&#8209;&#160;08.2020</span>
                     </p>
-                    <p class="expiriense-description">Developing website template from a .psd layouts. Technology stack used in development HTML5, Sass, Bootstrap, JavaScript, WordPress, Nunjucks, Gulp.</p>
+                    <p class="expiriense-description dot">Developing website template from a .psd layouts. Technology stack used in development HTML5, Sass, Bootstrap, JavaScript, WordPress, Nunjucks, Gulp.</p>
 
                 </article>
                 <article class="education">
