--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1>Serhiy Antipov</h1>
                 <h2>front end developer</h2>
             </div>
-            <div class="owner-photo"><img src="img/owner-photo2.jpg" alt="owner photo"></div>
+            <div class="owner-photo"><img src="img/owner-photo2_480.jpg" alt="owner photo"></div>
             <ul class="cv-header-social">
                 <li>
                     <a href="https://www.facebook.com/AntipovSerhiy" target="_blank" rel="noopener">
