--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                     <div>
                         <img src="img/skill/link_scenegraph.png" alt="roku sceneGraph skill">
-                        <p><span>SceneGraph </span>Used this framework for developing Roku sample channels and templates. Intermediate&nbsp;level</p>
+                        <p><span>SceneGraph (Roku) </span>Used this framework for developing Roku sample channels and templates. Intermediate&nbsp;level</p>
                     </div>
                     <!-- <div>
                         <img src="img/skill/link_Roku.png" alt="bright-script skill">
@@ -137,16 +137,16 @@
                         <p><span>React </span>Developed one game. Pre&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
+                        <img src="img/skill/link_js.png" alt="js skill">
+                        <p><span>JavaScript </span>Working with DOM elements, writing simple scripts. Intermediate&nbsp;level</p>
+                    </div>
+                    <div>
                         <img src="img/skill/link_html.png" alt="html skill">
                         <p><span>HTML </span>Writing semantic html markup. Upper&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/skill/link_css.png" alt="css skill">
                         <p><span>CSS, SASS </span>Adaptive design and cross-browser layout. Upper&#8209;Intermediate&nbsp;level</p>
-                    </div>
-                    <div>
-                        <img src="img/skill/link_js.png" alt="js skill">
-                        <p><span>JavaScript </span>Working with DOM elements, writing simple scripts. Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/skill/link_git.png" alt="git skill">
@@ -156,14 +156,14 @@
                         <img src="img/skill/link_gulp.png" alt="react skill">
                         <p><span>Gulp </span>Basic knowledge. Intermediate&nbsp;level</p>
                     </div>
-                    <div>
+                    <!-- <div>
                         <img src="img/skill/link_bootstrap.png" alt="wp skill">
                         <p><span>Bootstrap 4 </span>Basic knowledge. Intermediate&nbsp;level</p>
-                    </div>
-                    <div>
+                    </div> -->
+                    <!-- <div>
                         <img src="img/skill/link_wp.png" alt="wp skill">
                         <p><span>WordPress </span>Basic knowledge. Pre&#8209;Intermediate&nbsp;level</p>
-                    </div>
+                    </div> -->
                     <div>
                         <img src="img/skill/link_ps.png" alt="ps skill">
                         <p><span>Photoshop </span>Work with .psd layout of any complexity. Upper&#8209;Intermediate&nbsp;level</p>
