add course angular

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 </article>
                 <article class="courses">
                     <h3>Courses</h3>
+                    <p>Angular 9/Theory and practice (Vladilen Minin)<span>2021</span></p>
                     <p>«SoftServe IT Academy» HTML/CSS/JavaScript<span>2019</span></p>
                     <p>«HTML Academy» Professional JavaScript<span>2019</span></p>
                     <p>«Logos IT Academy» HTML/CSS<span>2018</span></p>
