--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <h3>Experience</h3>
                     <p class="experience-list">
                         <a href="https://jobs.dou.ua/companies/traffic-dna/" target="_blank" rel="noopener"><span class="company-name">TrafficDNA </span>(Roku&#160;Front&#8209;end&#160;developer)</a>
-                        <span class="work-period">09.2020&#160;&#8209;&#160;Till&#160;now</span>
+                        <span class="work-period">09.2020&#160;&#8209;&#160;Till&#160;Now</span>
                     </p>
                     <p class="expiriense-description dot">Creating a Single Page Website using Angular.</p>
                     <p class="expiriense-description dot">Developing Roku sample channels and templates. The SceneGraph framework is used for developing.</p>
@@ -115,10 +115,9 @@
                 </article>
                 <article class="courses">
                     <h3>Courses</h3>
-                    <p>Angular 9/Theory and practice (Vladilen Minin)<span>2021</span></p>
-                    <p>«SoftServe IT Academy» HTML/CSS/JavaScript<span>2019</span></p>
-                    <p>«HTML Academy» Professional JavaScript<span>2019</span></p>
-                    <p>«Logos IT Academy» HTML/CSS<span>2018</span></p>
+                    <p>ScriptJedi42/JavaScript, Programming Mentor<span>2022</span></p>
+                    <p>Angular 9/Theory and practice, Vladilen Minin<span>2021</span></p>
+                    <p>HTML/CSS/JavaScript, SoftServe IT Academy<span>2019</span></p>
                 </article>
                 <article class="professional-skill">
                     <h3>Professional skill</h3>
