--- a/index.html
+++ b/index.html
@@ -93,13 +93,19 @@
                 <article class="experience">
                     <h3>Experience</h3>
                     <p class="experience-list">
-                        <a href="https://jobs.dou.ua/companies/traffic-dna/" target="_blank" rel="noopener"><span class="company-name">TrafficDNA </span>(Roku&#160;Front&#8209;end&#160;developer)</a>
+                        <a href="https://playcentgames.com/" target="_blank" rel="noopener"><span class="company-name">Playcent Games </span><span class="job-title">(Roku&#160;Front&#8209;end&#160;developer)</span></a>
                         <span class="work-period">09.2020&#160;&#8209;&#160;Till&#160;Now</span>
                     </p>
-                    <p class="expiriense-description dot">Creating a Single Page Website using Angular.</p>
+                    <p class="experience-list">
+                        <a href="https://vlogbox.com/" target="_blank" rel="noopener"><span class="company-name">VlogBox </span><span class="job-title">(Roku&#160;Front&#8209;end&#160;developer)</span></a>
+                        <span class="work-period">07.2021&#160;&#8209;&#160;Till&#160;Now</span>
+                    </p>
                     <p class="expiriense-description dot">Developing Roku sample channels and templates. The SceneGraph framework is used for developing.</p>
                     <p class="expiriense-description dot">Developing games for the Roku devices. The Roku&#8209;gameEngine is used for developing game.</p>
-                    <p class="experience-list"><a href="https://jobs.dou.ua/companies/upqode/" target="_blank" rel="noopener"><span class="company-name">UPQODE </span>(Front&#8209;end&#160;developer)</a>
+                    <p class="expiriense-description dot">Creating a Single Page Website using Angular.</p>
+
+                    <p class="experience-list">
+                        <a href="https://upqode.com/" target="_blank" rel="noopener"><span class="company-name">UPQODE </span><span class="job-title">(Front&#8209;end&#160;developer)</span></a>
                         <span class="work-period">10.2019&#160;&#8209;&#160;08.2020</span>
                     </p>
                     <p class="expiriense-description dot">Developing website template from a .psd layouts. Technology stack used in development HTML5, Sass, Bootstrap, JavaScript, WordPress, Nunjucks, Gulp.</p>
