--- a/index.html
+++ b/index.html
@@ -127,12 +127,16 @@
                 <article class="professional-skill">
                     <h3>Professional skill</h3>
                     <div>
-                        <img src="img/skill/link_angular.png" alt="angular skill">
-                        <p><span>Angular </span>Studying. Pre&#8209;Intermediate&nbsp;level</p>
+                        <img src="img/skill/link_scenegraph.png" alt="roku sceneGraph skill">
+                        <p><span>SceneGraph </span>Used this framework for developing Roku sample channels and templates. Intermediate&nbsp;level</p>
                     </div>
                     <div>
-                        <img src="img/skill/link_scenegraph.png" alt="roku sceneGraph skill">
-                        <p><span>SceneGraph (Roku) </span>Used this framework for developing Roku sample channels and templates. Intermediate&nbsp;level</p>
+                        <img src="img/skill/link_gameEngine.png" alt="roku sceneGraph skill">
+                        <p><span>GameEngine </span>Used Roku-gameEngine to develop games for Roku devices. Intermediate&nbsp;level</p>
+                    </div>
+                    <div>
+                        <img src="img/skill/link_angular.png" alt="angular skill">
+                        <p><span>Angular </span>Developed several one-page applications. Pre&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <!-- <div>
                         <img src="img/skill/link_Roku.png" alt="bright-script skill">
@@ -140,7 +144,7 @@
                     </div> -->
                     <div>
                         <img src="img/skill/link_react.png" alt="react skill">
-                        <p><span>React </span>Developed one game. Pre&#8209;Intermediate&nbsp;level</p>
+                        <p><span>React </span>Developed several simple games. Pre&#8209;Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/skill/link_js.png" alt="js skill">
@@ -154,14 +158,14 @@
                         <img src="img/skill/link_css.png" alt="css skill">
                         <p><span>CSS, SASS </span>Adaptive design and cross-browser layout. Upper&#8209;Intermediate&nbsp;level</p>
                     </div>
-                    <div>
+                    <!-- <div>
                         <img src="img/skill/link_git.png" alt="git skill">
                         <p><span>Git </span>Basic knowledge. Intermediate&nbsp;level</p>
                     </div>
                     <div>
                         <img src="img/skill/link_gulp.png" alt="react skill">
                         <p><span>Gulp </span>Basic knowledge. Intermediate&nbsp;level</p>
-                    </div>
+                    </div> -->
                     <!-- <div>
                         <img src="img/skill/link_bootstrap.png" alt="wp skill">
                         <p><span>Bootstrap 4 </span>Basic knowledge. Intermediate&nbsp;level</p>
